# candlebench

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
docs/: _config.yml  commands.md  concepts.md  examples.md  getting-started.md  glossary.md  index.md  model-files.md  performance.md  publishing.md
docs/_layouts/: default.html
docs/assets/css/: site.css
src/: backend.rs  bench.rs  embeddings.rs  gguf.rs  hub.rs  inspect.rs  main.rs  tokenizer_lab.rs  tui.rs  util.rs
