[package]
name = "candlebench"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI for inspecting, embedding, and benchmarking local ML models with Candle."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
crossterm = "0.29.0"
hf-hub = "0.4.3"
humansize = "2"
memmap2 = "0.9"
ratatui = "0.30.0"
safetensors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22.2"

[features]
default = []
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
